--- a/assets/css/components/_comments.scss
+++ b/assets/css/components/_comments.scss
@@ -14,6 +14,10 @@
   margin-left: $tiniest-spacing;
 }
 
+.comment-container {
+  overflow-x: auto;
+}
+
 .comment-body {
   position: relative;
 }
